[project]

name = "nodriver_improved" # Required

version = "0.41a"  # Required

description = """

    [Docs here](https://ultrafunkamsterdam.github.io/nodriver)

    FORKED FROM https://ultrafunkamsterdam.github.io/nodriver all credit to the original author.
    This repository was created to tailor nodriver to my usecase.

"""  # Optional
readme = {file = "README.md", content-type = "text/markdown"} # Optional
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
keywords = [
    "webdriver", "browser", "captcha", "scraping",
    "selenium", "navigator", "python3", "cloudflare",
    "chromedriver", "anti-bot", "bot-detection",
    "cloudflare-bypass", "distil", "anti-detection"]
authors = [
  {name = "Chief-Zach"} # Optional
]

maintainers = [
  {name = "Chief-Zach" } # Optional
]
classifiers = [  # Optional

    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",

]

dependencies = [
      "mss",
      "websockets>=14",
      "deprecated"
]

#
[project.urls]
"Homepage" = "https://github.com/Chief-Zach/nodriver_improved"
"Bug Reports" = "https://github.com/Chief-Zach/nodriver_improved/issues"
"Source" = "https://github.com/Chief-Zach/nodriver_improved"


[tool.setuptools]
include-package-data = true
packages = ["nodriver_improved", "nodriver_improved.core", "nodriver_improved.cdp"]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "black",
    "build",
    "sphinx",
    "sphinx_markdown_builder",
    "sphinx_autodoc_typehints",
    "furo",
    "pygments",
    "sphinxcontrib-video"
]
